  [Paolo Tormene]
  * Internal: extended the MosaicGetter to a GlobalModelGetter class with
    the ability to associate points to countries

  [Michele Simionato]
  * Removed the obsolete `by_country` hack when managing the global exposures
  * Changed `oq sample` to use pandas for reading/writing CSVs, thus fixing
    the issue of quoted newlines
  * Fixed `oq check_input exposure.xml`
  * Added `rupture_dict` parameter to be used in scenarios

  [Marco Pagani]
  * Fixed a bug in the calculation of Rjb for gridded surfaces and added a
    dependency from alpha_shapes

  [Chris di Caprio]
  * Contributed many new GMPEs for the New Zealand model

  [Michele Simionato]
  * Fixed wrong `mean_rates_by_src` in presence of the colon convention
  * If there are no sources close to the (single) site, do not raise an error
  * Fixed a bug with --hc taking the parent site collection instead of
    the child site collection
  * Extended the exposure field mapping functionality to map the same
    input field to multiple columns in the asset collection
  * Removed the experimental aftershock calculator; aftershocks can
    be computed by simply including a file delta_rates.csv

  [Anirudh Rao]
  * Limited the cross-correlation coefficient of GodaAtkinson2009
    to have an upper bound of 1.0

  [Paolo Tormene]
  * Added commands `oq plot mean_hcurves_rtgm,governing_mce,disagg_by_src`

  [Michele Simionato]
  * Raised the limit on the product `num_assets * num_rlzs` when using
    full enumeration by a factor of 10
  * Fixed exporting-reimporting GMFs in hdf5 format
  * Fixed a bug causing the insured losses to be larger than the
    ground losses in some cases
  * Added command `oq info executing`
  * Added `extract/relevant_gmfs?threshold=` functionality
  * Added `extract/ruptures?threshold=` functionality
  * Disabling the DbServer with dbserver.host = local
  * Fixed `disagg_source` for same ID sources
  * Disambiguated same ID sources by appending the file name after