@@ -1,3 +1,6 @@
+  [Michele Simionato]
+  * Fixed `extract_from_zip` when managing zip files coming from MACOSX;
+
   [Paolo Tormene]
   * Internal: extended the MosaicGetter to a GlobalModelGetter class with
     the ability to associate points to countries
